site/media/css/eventgallery.css
/* Events */
#events .error {
	border:5px solid red;	
}

#events .item {		
	width: 320px;
	float:left;
	padding: 0px;
	margin: 0px;
	cursor: hand;
	margin-bottom: 0px;
}

#events .item_first {
	padding: 3px;

}

#events .item .content{		
	padding: 0px;
	margin: 0px;
	position: relative;
}

#events .item .content .data{
	position: absolute;
	bottom: 0px;
	z-index: 222;
	background-color: rgba(0, 0, 0, .30);
	width: 100%;
}

#events .item .content:hover .data{
	background-color: rgba(0, 0, 0, .70);
}

#events .item .content .images {	
	font-size: 0px;
	margin: 0px;
	padding: 0px;
	z-index: 1;
}

#events .item .content .images img{	
	opacity: 0.8;
}

#events .item .content:hover .images img{	
	opacity: 1;
}

#events .item .content:hover {
	
}

#events .item .content .thumbnails img{		
	padding: 0px;
	margin: 0px;
}

#events .item .content:hover {
    
}

#events .item h1 { }
#events .item h2 { font-size: 1.0em !important;}
#events .item h3 { font-size: 0.9em !important;}

#events .item .date {
	height: 18px;
	font-size: 0.7em !important; 
	font-weight: bold;
	margin: 0px 10px;
}

#events .item .title {
	min-height: 60px;
	font-size: 1.2em !important;
	overflow: auto;
	margin: 0px 10px;
}

#events .item_first .title{
	min-height: 10px;
	font-size: 1.2em !important;
	overflow: auto;
	margin: 0px 10px;
}

#events .item .comment,
#events .item .text {
	font-weight: bold;
	font-size: 0.8em !important;
	margin: 0px 10px;	
}

#events .item .overallCount {
	font-weight: bold;
	font-size: 0.8em !important;
	margin: 0px 10px;
}

#events .item .thumbnail {
	margin-top: 0px;
}



/* Event - Default */

#event {

}

#event .thumbnail {
	
	float:left;
	/*width: 180px;
	min-height: 50px;*/
	cursor: hand;
    background-image: url(../images/loading.gif);
	background-repeat: no-repeat;
	background-position: center;
	z-index:-1;
}

#event .thumbnail .img {

	line-height: 0px;
	position: relative;
}

#event .thumbnail .img .eventgallery-add2cart {
	position: absolute;
	bottom: 4px;
	right: 10px;
}


#event .thumbnail .img img {
	/*width:100%;
	height: auto;
	background-position: 0px 0px !important;
	background-size: 100% !important;
	text-align: center;  
  	background-repeat: no-repeat;*/
}

#event .thumbnail .add2cart{
	
	float: right;
}

#event .thumbnail .details {
	z-index: 100;
    position: absolute;
    width: 100%;
    display: none;
    background-color: black;
}

/* Event - Imagelist */

.thumbnails .thumbnail-container {
	float: left;
	position: relative;
}

.thumbnails .thumbnail {
	margin: 3px;	
	display: block;
	font-size: 0px;
	line-height: 0px;
}

.thumbnails .thumbnail-container .eventgallery-add2cart {
	position: absolute;
	bottom: 12px;
	right: 12px;
}

/* Event - Ajaxpaging */

.ajaxpaging{
	
}

.ajaxpaging .image {
	width: 100%;
	
}
.ajaxpaging .navigation {
	overflow: hidden;
	width: 100%;
	padding: 0px;
	margin: 0px;
	border-width: 0px;
}

.ajaxpaging #pageContainer {
	width: 60000px;
}

.ajaxpaging #pagerContainer {
	
	width: 100%;
	margin-right: 0px;
	
}

.ajaxpaging .page {
	float: left;
	width: 500px;
	margin-bottom: 10px;
	min-height: 130px;
}

.ajaxpaging .thumbnail {
	float: left;
	margin: 0px 15px 15px 0;
	width: 48px;
	height: 48px;
	padding: 0px;
	border-width: 0px;
}

.ajaxpaging pre {
	border: 1px solid #fff;
	background-color: #333;
	padding: 5px;
}

/* this is for the loading.gif */
.ajaxpaging .thumbnail div img {
	margin: 22px;
}

.ajaxpaging .thumbnail a img {
	width: 100%;
	height: 100%;
}

.ajaxpaging .image {
	width: 100%;

}

.ajaxpaging #bigimageContainer {
	float: left;
	position: relative;
	display: inline;
	width: 100%;

}

.ajaxpaging #bigImage {
	width: 100%;
	
}

.ajaxpaging #prev {
	float: left;
}

.ajaxpaging #next {
	float: right;
}

.ajaxpaging #count {
	width: 100%;
	text-align: center;
}

.ajaxpaging #count .count{
}

.ajaxpaging_inactive{
	padding-right: 0px;
	padding-left: 5px;
	font-weight: normal;	
}
	

.ajaxpaging_active{
	padding-right: 10px;
	padding-left: 15px;
	font-weight: bold;
}


.ajaxpaging a img {
	
}

.ajaxpaging .img_overlay {
    background: #000;
    filter: alpha(opacity=74);
    opacity: 0.74;
    position: absolute;
    color: white;
    left: 10px;
    bottom: 15px;
    text-align: center;
    font-variant:small-caps;
    line-height: 1.1em;
    width: 100%;
}

.ajaxpaging .img_overlay_fotos {
	filter: alpha(opacity=64);
    opacity: 0.64;
    left: 0px;
    bottom: 10px;
    padding-top: 5px;
    text-align: center;
    font-variant:small-caps;
    line-height: 1.1em;
}

/* Single Image */

#singleimage .singleimage {
   
}

#singleimage .item {
	background-color: #FF9900;
	border: 1px solid silver;
	width: 30%;
	float:left;
	padding: 2px;
	margin: 2px;
}


#singleimage .singleimage {
	width: 100%;
	min-height: 500px;
	background-image: url(../images/loading.gif);
	background-repeat: no-repeat;
	background-position: 30% 50%;
}

#singleimage .thumbnail > img {
	display: inline;
	max-width: none;
	margin-left: 0px;
	margin-right: 0px;
}


#singleimage .hits{
	display: inline;
	top: -4px;
	position: relative;
}



#singleimage .comment {
	width: 100%;
	float: left;
	margin: 0px;
	padding: 0px;
}

#singleimage .from {
	font-size: 0.8em;
	margin-bottom: 10px;

}

#singleimage .comment:hover {

}

#singleimage .details .content{
	padding: 10px;
}

#singleimage .details{
	padding-top: 10px;
}

div.commentform {}
div.commentform label {display: block; float:left; text-align:right; width:160px; padding-right: 10px;}
div.commentform form br{float: left}
div.commentform input, div.commentform textarea, div.commentform .input { margin-left: 70px; width:250px; margin: 3px;}
div.commentform textarea {HEIGHT: 100px;}
div.commentform label.check, div.commentform label.radio { position:relative; text-align:left; }
div.commentform form div {padding: 3px;}
div.commentform .error {color:red; padding:3px; FONT-WEIGHT:bold;}
div.commentform {border: 0px solid silver;}
div.commentform h1{font-size: 1.2em; padding:2px; margin:0px;}
/* ... */

